<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="9"
    android:columnCount="2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/msg_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:paddingTop="5dp"
        android:text="@string/project_title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/foodnutrition100"
        android:text="@string/button1_name"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/movieinfo100"
        android:text="@string/button2_name"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/cbcicon100"
        android:text="@string/button3_name"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/octranspo100"
        android:text="@string/button4_name"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/msg_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:padding="3dp"
        android:text="@string/course_message"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/msg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:text="@string/group_message"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/msg_member1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:text="@string/member1_name"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/msg_member2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:text="@string/member2_name"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/msg_member3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:text="@string/member3_name"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/msg_member4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_marginBottom="5dp"
        android:text="@string/member4_name"
        android:textAlignment="center" />

</GridLayout>