<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".M1FavActivity">

    <TextView
        android:id="@+id/m1FavHeader"
        android:text="@string/m1Result"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/m1FoodName"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m1FavHeader"/>
    <TextView
        android:id="@+id/m1FoodTag"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m1FoodName"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m1AddATag"
        android:hint="@string/m1AddATag"
        android:layout_below="@id/m1FoodTag"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m1TagButton"
        android:text="@string/m1add"
        android:layout_toRightOf="@id/m1AddATag"
        android:layout_below="@id/m1FoodTag"
        />

    <Button
        android:id="@+id/m1DeleteButton"
        android:text="@string/m1Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/m1BackFromFavButton"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/m1BackFromFavButton"
        android:text="@string/positive_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"/>




</android.widget.RelativeLayout>