<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Member4SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarm4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/button4_name"
        app:titleTextAppearance="@style/TextAppearance.AppCompat"
        app:titleTextColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/ListViewSearchResultM4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarm4"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:text="@string/m4_db_search_result" />

    <ProgressBar
        android:id="@+id/ProgressBarM4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ListViewSearchResultM4"
        android:layout_margin="5dp"
        android:visibility="visible" />

    <LinearLayout
            android:id="@+id/listtitleBarSearchM4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ProgressBarM4"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/StationNumberSearchM4"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/m4_station_number" />

            <TextView
                android:id="@+id/RouteNumberSearchM4"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/m4_bus_line" />

            <TextView
                android:id="@+id/StationNameSearchM4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/m4_station_name" />
    </LinearLayout>

        <ListView
            android:id="@+id/ListViewSearchM4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listtitleBarSearchM4"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="6dp" />

    <!--
        <LinearLayout
            android:id="@+id/buttonBarM4"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/member4Btn1"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button1_name"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <Button
                android:id="@+id/member4Btn2"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button2_name"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <Button
                android:id="@+id/member4Btn3"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button3_name"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/SearchStationM4"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="false"
            android:layout_above="@+id/buttonBarM4"
            android:layout_marginStart="2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginBottom="0dp"
            android:layout_toLeftOf="@+id/SearchButtonM4"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="460dp" />

        <Button
            android:id="@+id/SearchButtonM4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:layout_above="@+id/buttonBarM4"
            android:text="@string/m4_searchbtn"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="460dp" />
    -->
</RelativeLayout>