<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/framelayoutstationm4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".M4BusStopDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/ProgressBarM4"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewStationDetails01M4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ProgressBarM4"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark" />

        <ExpandableListView
            android:id="@+id/listViewDetailsExpM4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:groupIndicator="@android:color/transparent"
            android:layout_below="@+id/textViewStationDetails01M4"
            android:layout_above="@+id/buttonBarM4" >
        </ExpandableListView>

        <LinearLayout
            android:id="@+id/buttonBarM4"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/member4Btn1"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m4_remove_button"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <Button
                android:id="@+id/member4Btn2"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m4_add_button"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <Button
                android:id="@+id/member4Btn3"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m4_refresh_button"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
